--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-native": "0.70.6",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "^3.18.2"
+    "react-native-screens": "^3.18.2",
+    "react-native-snap-carousel": "apurba-bware/react-native-snap-carousel#5a7f809e921262e4e2f646e8cfc4da85f7bd663d"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
